src/objects/cb5__CBFolder__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Folder</label>
        <referenceTo>cb5__CBFolder__c</referenceTo>
        <relationshipLabel>CB Folders</relationshipLabel>
        <relationshipName>CB_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__FolderType__c</fullName>
        <label>Folder Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modeling Rule</fullName>
                </value>
                <value>
                    <fullName>Calculation Rule</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CB Folder</label>
    <nameField>
        <label>CB Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>